# LAEDS_I

./: Alteração do ET.c  Criptografia.c  Decimal para Binário.c  Decomposição.c  Distancia entre duas cidades.c  Dígitos.c  FIla.c  Fatorial de Números Grandes.c  Fatorial de numeros grandes.c  Mochila.c  Máximo Divisor Comum.c  Ordenação por distribuição usando pilhas.c  Potência.c  README.md  Soma de dois números (teste)
Lista Duplamente Encadeada/: CMakeLists.txt  fila_duplamente_encadeada.c  fila_duplamente_encadeada.h  main.c
TP1 - Problema da Mochila/: CMakeLists.txt  README.md  main.c
TP1 - Problema da Mochila/C files/: bruto_solution.c  getrusage.c  gettimeofday.c  guloso_solution.c  pegar_do_arquivo.c
TP1 - Problema da Mochila/Headers/: bruto_solution.h  getrusage.h  gettimeofday.h  globais.h  guloso_solution.h  pegar_do_arquivo.h
TP2 - Ordenação/: CMakeLists.txt  README.md  main.c
TP2 - Ordenação/Codigo/: auxiliar.c  ordena.c
TP2 - Ordenação/Headers/: auxiliar.h  globais.h  ordena.h
